--- a/README
+++ b/README
@@ -1,7 +1,7 @@
+Deprecated.
+See libgoodbrew: https://github.com/MyLegGuy/libgoodbrew
+===============
 Functions that make use of platform specific libraries to make cross platform functions.
-
 The platforms I test on are Windows and PS Vita.
-
 Example project is in the "test" folder.
-
 See COMPILE.md for information about compiling.
